--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>About Suellen Lima</title>
+	<title>Suellen Lima</title>
 
 </head>
 <body>
+<div id="interface">
+	<hgroup>
+	<h1>Suellen Lima</h1>
+	</hgroup>
+	<img src="_images/ada1.jpg">
 	
-Suellen Lima
-
 Instagram: www.instagram.com/suellenlime
 Facebook: www.facebook.com/suellenlime
 Twitter: www.twitter.com/suellenlime
@@ -34,6 +37,7 @@ Passionate for innovations engineering exact nature animals surf martial arts ar
 The days went by fast and it took a while until I found my passions and life purpose. And now I dedicate my time with high performance to develop all my skills, projects, missions and passions.
 
 Copyright 2019 - by Suellen Lima
+</div>
 </body>
 
 </html>
