--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<h1>Suellen Lima</h1>
 	</hgroup>
 	<img src="_images/ada1.jpg">
-	
+
 Instagram: www.instagram.com/suellenlime
 Facebook: www.facebook.com/suellenlime
 Twitter: www.twitter.com/suellenlime
 Youtube: www.youtube.com/suellenlime
 
-CONTATO
+CONTACT
 
 Areas
 
