--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	</hgroup>
 	<img src="_images/ada1.png"/>
 
-Instagram: www.instagram.com/suellenlime
+<h2>Instagram: www.instagram.com/suellenlime
 Facebook: www.facebook.com/suellenlime
 Twitter: www.twitter.com/suellenlime
-Youtube: www.youtube.com/suellenlime
+Youtube: www.youtube.com/suellenlime</h2>
 
 CONTACT
 
