--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<hgroup>
 	<h1>Suellen Lima</h1>
 	</hgroup>
-	<img src="_images/ada1.png"/>
+	<img src="suellenlima.github.io/_images/ada1.png"/>
 
 Instagram: www.instagram.com/suellenlime
 Facebook: www.facebook.com/suellenlime
@@ -24,6 +24,8 @@ Areas
 
 Dev - Entrepreneur - Social Media - Musician - Arts - Gamer - Archer
 
+</div>
+<div>
 
 Bio
 
