--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Suellen Lima</title>
-	<img src="_images/ada1.png"/>
+	<img src="_images/ada1.png" alt="hi" class="inline"/>
 </head>
 <body>
 <div id="interface">
