--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Suellen Lima</title>
-	<img src="_images/1.jpeg" class="inline"/>
+	<img src="../_images/1.jpeg" class="inline"/>
 </head>
 <body>
 <div id="interface">
