--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<hgroup>
 	<h1>Suellen Lima</h1>
 	</hgroup>
+	<div>
 	<img src="_images/ada1.png"/>
+	</div>
 
 <h2>Instagram: www.instagram.com/suellenlime
 Facebook: www.facebook.com/suellenlime
