--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1>Suellen Lima</h1>
 	</hgroup>
 	<div>
-	<img src="_images/ada1.png"/>
+	<img src="https://github.com/suellenlima/suellenlima.github.io/blob/gh-pages/_images/ada1.png?raw=true" width=200 height=200/>
 	</div>
 
 <h2>Instagram: www.instagram.com/suellenlime
